# wasmer-js-test

./: .gitignore  Cargo.toml  build-native.sh  build.sh  index.js
host_runner/: Cargo.toml
host_runner/src/: lib.rs
host_runner_native/: Cargo.toml
host_runner_native/src/: main.rs
runner_base/: Cargo.toml
runner_base/src/: lib.rs
wasm_guest_binary/: Cargo.toml
wasm_guest_binary/src/: lib.rs
