# [package]
# name = "swc-workspace"
# version = "0.1.0"

[workspace]
members = [
  "host_runner",
  "host_runner_native",
  "wasm_guest_binary",
  "runner_base"
]
resolver = "2"

# [dependencies]
# host_runner = { version = "=0.1.0", path = "host_runner", default-features = false }
# host_runner_native = { version = "=0.1.0", path = "host_runner", host_runner_native = false }

# [features]
# default = []
