[package]
name = "host_runner_native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
runner_base = { version="*", path = "../runner_base" }
rkyv = "0.7.35"
parking_lot = "0.12.0"
wasmer = {version = "2.2.0", default-features = false }
wasmer-wasi = {version = "2.2.0", default-features = false }

[features]
base = ["wasmer/sys-default", "wasmer-wasi/sys-default", "wasmer-wasi/host-fs"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmer-cache = "2.2.0"
